tell isn't lseek alt, at example

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,15 @@ platform = lin
 
 items = ${platform} actioncode actionparse actionpool action actionutil bits character file storage swf tool util ../shared/action_dllmain
 
+syms =-s
+
+name = actionswf.so
+
 all: ${items}
 	ounused ${logs}
-	#ld ${obs}
+	#--exclude-modules-for-implib and --exclude-symbols are for PE only not elf
+	#`printf ',%s.s.log' ${items} | cut -c2-`
+	$(LD) ${syms} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${obs} -shared -entry DllMain -o ${name} -lc
 
 logs :=
 obs :=
@@ -20,6 +26,7 @@ install:
 clean:
 	-printf ' %s.s.log' ${items} | xargs rm -f
 	-printf ' %s.o' ${items} | xargs rm -f
+	-rm -f ${name}
 
 distclean:
 
