ar triage but weak is still there

--- a/example/Makefile
+++ b/example/Makefile
@@ -3,14 +3,16 @@ syms=-s
 
 name=example
 
-all: ${name} uns lnk
-	#./example
+all: ${name} uns lnk exe
 
 uns:
 	ounused ${name}.s.log
 
 lnk:
 	$(LD) ${syms} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so
+
+exe:
+	export LD_LIBRARY_PATH=../src; ./example
 
 %: %.s
 	o $< conv_64 1
