--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 
 platform = lin
 OCOMP=o
-OFLAGS = conv_64 1
-syms =-s
+OFLAGS=
+syms=-s
 
 items = ${platform} actioncode actionparse actionpool actionutil bits character file storage util
 expitems = action swf tool ../shared/action_dllmain
@@ -13,6 +13,9 @@ ifeq (${platform},win)
 	OFLAGS += inplace_reloc 0 include_sec 1
 else
 	OFLAGS += underscore_pref 1
+endif
+ifeq (${conv_64},1)
+	OFLAGS += conv_64 1
 endif
 
 projname=actionswf
