back at 32 for the moment

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,16 +1,14 @@
 
 platform = lin
 OCOMP=o
-OFLAGS=
 syms=-s
+conv_64=1
+OFLAGS=conv_64 ${conv_64}
 
 ifeq (${platform},win)
 	OFLAGS += inplace_reloc 0 include_sec 1
 else
 	OFLAGS += underscore_pref 1 exit_end 1
-endif
-ifeq (${conv_64},1)
-	OFLAGS += conv_64 1
 endif
 
 name=example
@@ -27,11 +25,14 @@ lib:
 
 lnk:
 	if [ "${platform}" = "lin" ]; then \
-		$(LD) ${syms} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so; \
+		if [ "${conv_64}" = "1" ]; then \
+			$(LD) ${syms} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so; \
+		else \
+			$(LD) ${syms} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so; \
+		fi \
 	else \
 		i686-w64-mingw32-ld ${syms} ${name}.o -entry example_main -lmsvcrt -o ${name}.exe -L. -l:libactionswf.a; \
 	fi
-#$(LD) ${syms} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so
 
 exe:
 	if [ "${platform}" = "lin" ]; then \
