--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -22,8 +22,8 @@ jobs:
       version=`cat debian/changelog | head -1 | grep -Poe "[^\(]*(?=\))"`
       #dist=`cat debian/changelog | head -1 | grep -Poe "[^ ]*(?=;)"`
       if [ ! -e "lp.py" ]; then
-       wget -q https://raw.githubusercontent.com/colin-i/test/master/lp.py
-       sudo apt install python3-launchpadlib
+       wget -q https://raw.githubusercontent.com/colin-i/test/master/lp2.py
+       #sudo apt install python3-launchpadlib it is on 22.04
       fi
       OUTPUT=$(python3 lp2.py ppa${{ github.event.inputs.ppa }} ${name} ${version})
       wget ${OUTPUT}/+files/${name}_${version}_${arh}.deb -O ${name}.deb
