--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -21,7 +21,7 @@ jobs:
       name=`cat debian/changelog | head -1 | grep -o ^[^\ ]*`
       version=`cat debian/changelog | head -1 | grep -Poe "[^\(]*(?=\))"`
       #dist=`cat debian/changelog | head -1 | grep -Poe "[^ ]*(?=;)"`
-      if [ ! -e "lp.py" ]; then
+      if [ ! -e "lp2.py" ]; then
        wget -q https://raw.githubusercontent.com/colin-i/test/master/lp2.py
        #sudo apt install python3-launchpadlib it is on 22.04
       fi
