--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -34,8 +34,9 @@ jobs:
       sudo apt install alien
       sudo alien -rk ../${name}.deb
       fname=`ls`
-      mv ${fname} ../
-      echo "file=${fname}" >> $GITHUB_ENV
+      fnamefinal=`echo ${fname} | sed "s/-/./"`
+      mv ${fname} ../${fnamefinal}
+      echo "file=${fnamefinal}" >> $GITHUB_ENV
    - name: artifact
      uses: actions/upload-artifact@v3
      with:
