--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -16,7 +16,7 @@ jobs:
        sudo add-apt-repository -y ppa:colin-i/ppa
        sudo apt install -y devscripts debhelper ocompiler
       fi
-      name=`cat debian/changelog | head -1 | grep -o ^[^\ ]*`
+      name=`cat in/debian/changelog | head -1 | grep -o ^[^\ ]*`
       origf=${name}-1.tar.gz
       if [ ! -e "${origf}" ]; then
        origln=${name}_1.orig.tar.gz
