--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -25,7 +25,7 @@ jobs:
        wget -q https://raw.githubusercontent.com/colin-i/test/master/lp2.py
        #sudo apt install python3-launchpadlib it is on 22.04
       fi
-      OUTPUT=$(python3 lp2.py ppa${{ github.event.inputs.ppa }} ${name} ${version})
+      OUTPUT=$(python3 lp2.py ppa${{ github.event.inputs.ppa }} ${name} ${version} ${arh})
       wget ${OUTPUT}/+files/${name}_${version}_${arh}.deb -O ${name}.deb
       #make rpm
       mkdir out
