--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 4.5.0
 Homepage: https://github.com/colin-i/actionswf
 
 Package: actionswf
-Architecture: i386
+Architecture: amd64
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Action Swf library
