fix a stack value

--- a/example/Makefile
+++ b/example/Makefile
@@ -13,8 +13,10 @@ OFLAGS=conv_64 ${conv_64}
 ifeq (${platform},win)
 	OFLAGS += inplace_reloc 0 include_sec 1
 else
-	OFLAGS += exit_end 1
-	# underscore_pref 1   win32 with _, can go back to this later
+	ifeq (${conv_64},1)
+		OFLAGS += exit_end 1
+		# underscore_pref 1   win32 with _, can go back to this later
+	endif
 endif
 
 name=example
@@ -40,17 +42,18 @@ lib:
 lnk:
 	if [ "${platform}" = "lin" ]; then \
 		if [ "${conv_64}" = "1" ]; then \
-			$(LD) ${syms} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so; \
+			$(LD) ${syms} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry main -o ${name} -lc -L../src -l:actionswf.so; \
 		else \
-			$(LD) ${syms} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry example_main -o ${name} -lc -L../src -l:actionswf.so; \
+			$(CC) ${syms} ${name}.o -o ${name} -L../src -l:actionswf.so; \
 		fi \
 	else \
 		if [ "${conv_64}" = "1" ]; then \
-			i686-w64-mingw32-ld ${syms} ${name}.o -entry example_main -lmsvcrt -o ${name}.exe -L. -l${linkname}; \
+			i686-w64-mingw32-ld ${syms} ${name}.o -entry main -lmsvcrt -o ${name}.exe -L. -l${linkname}; \
 		else \
-			x86_64-w64-mingw32-ld ${syms} ${name}.o -entry example_main -lmsvcrt -o ${name}.exe -L. -l${linkname}; \
+			x86_64-w64-mingw32-ld ${syms} ${name}.o -entry main -lmsvcrt -o ${name}.exe -L. -l${linkname}; \
 		fi \
 	fi
+#$(LD) ${syms} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry main -o ${name} -lc -L../src -l:actionswf.so; \
 
 exe:
 	if [ "${platform}" = "lin" ]; then \
