--- a/src/Makefile
+++ b/src/Makefile
@@ -44,6 +44,8 @@ $(foreach var,$(items),$(eval logs += ${items_prefix}${var}.s.log))
 
 ATLDCOM = $(LD) ${syms} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${eobs} -shared -entry DllMain -o ${name} -lc -L. -l:${exte} --exclude-libs ${exte}
 
+strippy=ostriputil
+
 ifeq (${platform},win)
 all: compile ounused link def
 else ifeq (${conv_64},1)
@@ -55,12 +57,12 @@ ${name}:
 	@echo
 	$(AR) cr ${exte} ${obs}
 	${ATLDCOM}
-	if [ ! -e "./strip.py" ]; then wget https://raw.githubusercontent.com/colin-i/o/master/ostrip/strip.py; fi
 	$(eval strp = )
 	$(foreach var,$(expitems),$(eval strp += ${items_prefix}${var}.es.log ${items_prefix}${var}.o))
 	$(foreach var,$(items),$(eval strp += ${items_prefix}${var}.s.log ${items_prefix}${var}.o))
 	ostrip ${name} ${strp}
-	python3 strip.py ${name} ${debugstrip}${name}
+	#if [ ! -e "./strip.py" ]; then wget https://raw.githubusercontent.com/colin-i/o/master/ostrip/strip.py; fi
+	${strippy} ${name} ${debugstrip}${name}
 endif
 
 %.o: %.s
